--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,10 +28,124 @@ body {
     width: 100%;
     height: 100vh;
     background: url("../images/intro.jpg") center,no-repeat;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    height: 100vh;
+    text-align: center;
     
 }
 
+.intro__title {
+font-size: 150px;
+font-weight: 700;
+text-transform: uppercase;
+color:#fff;
+line-height: 1;
+}
+
+.intro__title::after {
+content: "";
+display: block;
+width: 60px;
+height: 3px;
+background-color: #fff;
+margin: 30px auto ;
+
+}
+
+.intro__inner {
+    width: 100%;
+    max-width: 880px;
+    margin: 0 auto;
+}
+
+.intro__suptitle {
+    font-family: 'Kaushan Script',cursive;
+    font-size: 72px;
+    color:#fff;
+    /* width: 550px; */
+    /* text-align: center; */
+    margin-bottom: 20px;
+}
+
+.intro__btn{
+    display: inline-block;
+    vertical-align: top;
+    margin: 0 auto;
+    border: 3px solid white;
+    padding: 8px 30px;
+    font-size: 14px;
+    font-weight: 700;
+    text-transform: uppercase;
+    color:#fff;
+    text-decoration: none;
+
+}
+
+.intro__btn:hover{    
+    background-color: #fff;
+    color: #333;
+
+}
+
+/* slider */
+
+.intro__slider{
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    z-index: 1;
+
+   
+}
+
+.slider__inner{
+    display: flex;
+    justify-content: space-between;
+    
+}
+
+.slider__item{
+    width: 23%;
+    font-size: 18px;
+    color: #fff;
+    padding: 20px 0;
+    border-top: 3px solid #fff;
+    opacity: 0.7;
+    text-transform: uppercase;
+
+}
+.slider__item.active{
+    opacity: 1;
+}
+.slider__item.active::before {
+    content: "";
+    display: block;
+    width: 70px;
+    height: 3px;
+    top:-23px;
+    left: 0;
+    z-index: 1;
+    position: relative;
+    background-color: #f38181;
+
+
+}
+
+.slider__number{
+    font-size: 24px;
+    font-weight: 700;
+
+}
+
+
+/* header */
+
 .header {
+    padding-top: 30px;
     z-index: 1000;
     width: 100%;
     position: absolute;
@@ -40,18 +154,53 @@ body {
     right: 0;
 }
 
+.header__inner{
+    display: flex;
+    justify-content:space-between;
+    
+}
+
 .header__logo {
     font-size: 30px;
     font-weight: 700;
     color:#fff;
 }
 .nav__link {
+    display: inline-block;
+    vertical-align: top;
     color:#fff;
     text-decoration: none;
     transition: color .2s linear;
+    margin: 0 15px;
+    position: relative; 
+}
+
+.nav__link:after{
+    content:'';
+    display: block;
+    width: 100%;
+    height: 3px;
+    display: none;
+    background-color:#fce38a;;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    z-index: 1;
+    
 }
 
 .nav__link:hover {
+    color: #fce38a;
+}
+
+.nav__link:hover:after,
+.nav__link.slider__item.active::before
+{
+    opacity: 1;
+    display: block;
+    
+}
+.nav__link.active{
     color: #fce38a;
 }
 
