--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -204,3 +204,136 @@ margin: 30px auto ;
     color: #fce38a;
 }
 
+/* section */
+
+.section{
+    padding: 80px;
+}
+
+.section__header{
+    width: 100%;
+    max-width: 950px;
+    margin: 0 auto 40px;
+    text-align: center;
+}
+
+.section__suptitle{
+    font-family: 'Kaushan Script',cursive;
+    font-size: 24px;
+    color: #333;
+}
+
+.section__title{
+    font-size: 30px;
+    text-transform: uppercase;
+    font-weight: 700;
+    color: #333;
+}
+
+.section__title::after{
+    content: "";
+    display: block;
+    margin: 30px auto;
+    width: 60px;
+    height: 3px;
+    background-color:#f38181;
+}
+
+.section__text{
+    font-size:15px;
+    color: #999;
+}
+
+/* about */
+
+   
+.about {
+    margin-top: 80px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.about__item {
+    width: 380px;
+    position: relative;
+
+    background-color: #95e1d3;
+}
+
+.about__item:hover .about__img {
+    transform: translate3d(-10px, -10px, 0);
+}
+
+.about__item:hover .about__img img {
+    opacity: .1;
+}
+
+.about__item:hover .about__text {
+    opacity: 1;
+}
+
+.about__img {
+    background: linear-gradient(to bottom, #f38181, #fce38a);
+
+    transition: transform .2s linear;
+}
+
+.about__img img {
+    display: block;
+    transition: opacity .1s linear;
+}
+
+.about__text {
+    width: 100%;
+
+    font-size: 18px;
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: 700;
+    text-align: center;
+    opacity: 0;
+
+    position: absolute;
+    top: 50%;
+    left: 0;
+    z-index: 2;
+    transform: translate3d(0, -50%, 0);
+
+    transition: opacity .2s linear;
+}
+
+/* statistics */
+
+.statistics{
+    background-color: #95e1d3;
+}
+.stat{
+    display: flex;
+}
+
+.stat__item{
+    flex:1 1 0;
+    padding: 70px 25px;
+    border-left:1px solid #b5eae0;
+    text-align: center;
+    color:#fff;
+}
+
+.stat__item:last-child{
+    border-right:1px solid #b5eae0;
+}
+
+.stat__count{
+    margin-bottom: 10px;
+    font-size: 42px;
+    font-weight: 700;
+    line-height: 1;
+
+}
+
+.stat__text{
+    font-size: 14px;
+    text-transform: uppercase;
+    font-family: 'Montserrat', sans-serif;
+}
+    
