--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -209,11 +209,17 @@ margin: 30px auto ;
 .section{
     padding: 80px;
 }
+.section--devices{
+    padding-bottom: 0;
+    background:url(../images/devices-bg.jpg)
+    center no-repeat;
+    background-size: cover;
+}
 
 .section__header{
     width: 100%;
     max-width: 950px;
-    margin: 0 auto 40px;
+    margin: 0 auto 50px;
     text-align: center;
 }
 
@@ -336,4 +342,67 @@ margin: 30px auto ;
     text-transform: uppercase;
     font-family: 'Montserrat', sans-serif;
 }
+
+/* services */
+
+.services{
+    display: flex;
+    
+}
+
+.services__item{
+    flex:1 1 0;
+    padding-right: 35px;
+    padding-left:85px;
+    position: relative;
+}
+
+.services__icon{
+    position: absolute;
+    top: 0;
+    left: 28px;
+    z-index: 1;
+}
+.services__title{
+    font-size: 14px;
+    color:#333;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+}
+
+.services__text{
+    font-size: 15px;
+    color: #999;
+}
+
+.hr{
+    display: block;
+    width: 100%;
+    height: 1px;
+    margin: 40px 0;
+    border:0;
+    background-color: #e5e5e5;
+}
+/* 
+Devices */
+
+.devices{
+    width: 100%;
+    max-width: 600px;
+    margin: 0 auto;
+    position: relative;
+}
+
+.devices__item{
+    display: block;
+}
+.devices__item--iphone{
+    position: absolute;
+    bottom:-70px;
+    right: 0;
+    z-index: 1;
+
+}
+
+
     
