--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -213,6 +213,12 @@ margin: 30px auto ;
 .section--gray{
     background-color: #e8e8e8;
 }
+.section--clients{
+    background:url("../images/clients-bg.jpg" )
+    center no-repeat;
+    background-size:cover
+}
+
 .section--devices{
     margin-bottom: 40px;
     padding-bottom: 0;
@@ -518,7 +524,7 @@ Devices */
 }
 
 .reviews__item{
-    padding-left: 205px;
+    padding-left: 255px;
     position: relative;
 }
 
@@ -528,6 +534,7 @@ Devices */
     left: 0;
     z-index: 1;
     border:2px solid #95e1d3;
+    border-radius: 50%;
 }
 
 .reviews__text{
@@ -616,7 +623,118 @@ social */
 .logos{
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
-.logos__item{
 
+/* works */
+
+.works {
+    display: flex;
+}
+
+.works__col{
+    flex: 1 1 0;
+}
+
+.works__item{
+    position: relative;
+    background: linear-gradient(to bottom, #f38181, #fce38a);
+}
+
+.works__item:hover .works__image{
+    opacity: .1;
+}
+
+.works__image{
+    max-width: 100%;
+    height: auto;
+    display: block;
+    transition: opacity .2s linear;
+}
+
+.works__item:hover .works__info{
+    opacity: 1;
+}
+
+.works__info{
+    opacity: 0;
+    padding: 0 15px;
+    width: 100%;
+    text-align: center;
+    color:#fff;
+    position: absolute;
+    top:50%;
+    left: 0;
+    z-index: 1;
+    transform: translate3d(0,-50%,0);
+    transition: opacity .2s linear;
+
+}
+
+.works__title{
+    color:#fff;
+    font-size: 14px;
+    text-transform: uppercase;
+    margin-bottom: 5px;
+
+}
+
+.works__text{
+    font-size: 15px;
+    font-weight: 300;
+    
+}
+
+/* clients */
+
+.clients{
+    margin-top: 70px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.clients__item{
+    width: 50%;
+    padding: 0 45px 0 175px;
+    position: relative;
+    margin-bottom: 60px;
+
+}
+
+.clients__photo{
+    width: 110px;
+    height: 110px;
+    border-radius:50%;
+    position: absolute;
+    top:0;
+    left: 40px;
+    z-index: 1;
+}
+
+.clients__name{
+    font-size: 14px;
+    color:#333;
+    text-transform: uppercase;
+    margin-bottom: 5px;
+}
+
+.clients__prof{
+    font-size: 15px;
+    font-weight: 300;
+    color:#333
+}
+
+.clients__text{
+    font-size: 15px;
+    color:#999;
+
+}
+
+.clients__text::before{
+    content: "";
+    display: block;
+    width: 60px;
+    height: 3px;
+    background-color: red;
+    margin: 15px 0;
 }
