--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -738,3 +738,88 @@ social */
     background-color: red;
     margin: 15px 0;
 }
+
+/* blog */
+
+.blog{
+    display: flex;
+    justify-content: space-between;
+}
+
+.blog__item{
+    width: 30%;
+}
+
+.blog__header{
+    position: relative;
+    margin-bottom: 14px;
+}
+
+.blog__photo{
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
+.blog__date{
+    background-color: #95e1d3;
+    position: absolute;
+    bottom: 10px;
+    left: -10px;
+    z-index: 1;
+    font-size: 15px;
+    color:white;
+    text-align: center;
+    padding: 10px 20px;
+    font-weight: 300;
+}
+
+.blog__date-day{
+    font-size: 30px;
+    font-weight: 700;
+    font-style: normal;
+    line-height: 1;
+}
+
+.blog__content{
+    margin-bottom: 14px;
+}
+
+.blog__title{
+    margin-bottom: 10px;
+    font-size: 14px;
+    color: #333;
+    text-transform: uppercase;
+}
+
+.blog__title a {
+    color:inherit;
+    text-decoration: none;
+}
+
+.blog__title a:hover {
+    text-decoration: underline;
+}
+
+.blog__text{
+    font-size: 15px;
+    color:#999;
+}
+
+.blog__footer{
+    padding-top: 14px;
+    border-top: 1px solid #e5e5e5;
+    font-size: 15px;
+    font-weight: 300;
+    color:#999;
+}
+
+.blog-stat__item{
+    display: inline-block;
+    margin-right: 10px;
+    vertical-align: top;
+}
+
+.blog-stat__item i{
+    color:#95e1d3;
+}
