refacor:Adaptive layout,part1

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,10 +16,20 @@ body {
     line-height: 1.6;
 }
 
+hr{
+    display: block;
+    width: 100%;
+    height: 1px;
+    margin: 40px 0;
+    border:0;
+    background-color: #e5e5e5;
+}
+
 /* container */
 .container {
+    padding: 0 15px;
     width: 100%;
-    max-width: 1200px;
+    max-width: 1230px;
     margin: 0 auto;
 }
 
@@ -28,6 +38,7 @@ body {
     width: 100%;
     height: 100vh;
     background: url("../images/intro.jpg") center,no-repeat;
+    background-size:cover;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -271,13 +282,15 @@ margin: 30px auto ;
 
    
 .about {
-    margin-top: 80px;
+    margin: 80px -15px 0;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
 }
 
 .about__item {
-    width: 380px;
+    width: 33.333333%;
+    padding: 0 15px;
    
 }
 
@@ -306,7 +319,10 @@ margin: 30px auto ;
 }
 
 .about__img img {
+    
     display: block;
+    max-width: 100%;
+    height: auto ;
     transition: opacity .1s linear;
 }
 
@@ -354,6 +370,7 @@ margin: 30px auto ;
 }
 .stat{
     display: flex;
+    flex-wrap: wrap;
 }
 
 .stat__item{
@@ -386,14 +403,18 @@ margin: 30px auto ;
 
 .services{
     display: flex;
+    flex-wrap: wrap;
     
 }
 
 .services__item{
-    flex:1 1 0;
-    padding-right: 35px;
-    padding-left:85px;
+    width: 33.33333%;
+    padding: 0 35px 40px 85px;
     position: relative;
+    margin-bottom: 40px;
+}
+.services__item--border{
+    border-bottom:1px solid #e5e5e5
 }
 
 .services__icon{
@@ -414,14 +435,14 @@ margin: 30px auto ;
     color: #999;
 }
 
-.hr{
+/* .hr{
     display: block;
     width: 100%;
     height: 1px;
     margin: 40px 0;
     border:0;
     background-color: #e5e5e5;
-}
+} */
 /* 
 Devices */
 
@@ -434,6 +455,9 @@ Devices */
 
 .devices__item{
     display: block;
+    max-width: 100%;
+    height: auto;
+
 }
 .devices__item--iphone{
     position: absolute;
@@ -447,11 +471,21 @@ Devices */
 
 .wedo{
     display: flex;
+    flex-wrap: wrap;
+    margin: 0 -15px;
 }
 
 .wedo__item{
     width: 50%;
+    padding: 0 15px;
 }
+
+.wedo__img{
+    display: block;
+   max-width: 100%;
+   height: auto;
+}
+
 
 /* Accordion */
 
@@ -1065,4 +1099,171 @@ font-weight: 300;
 
 .copyright span {
     color:red;
+}
+
+@media (max-width:1200px){
+    /* Intro */
+        .intro__suptitle{
+            font-size: 52px;
+        }
+        .intro__title{
+            font-size: 120px;
+        }
+}
+
+@media (max-width:990px){
+    /* Intro */
+        .intro__suptitle{
+            font-size: 32px;
+        }
+        .intro__title{
+            font-size: 80px;
+        }
+
+        /* Stat */
+        .stat{
+            justify-content: center;
+        }
+
+        .stat__item{
+            flex: none;
+            width: 33.33333%;
+            border:0;
+            padding-top: 30px;
+            padding-bottom: 30px;
+        }
+        .stat__item:last-child{
+            border-right:0;
+        }
+
+        /* Services */
+        .services__item{
+            width: 50%;
+            padding-bottom: 0;
+        }
+
+        .services__item--border{
+            border-bottom:0;
+        }
+}
+
+@media (max-width:770px){
+
+    /* Nav */
+    .nav{
+    display: none;
+    }
+
+    /* Section */
+    .section{
+        padding: 40px 0;
+    }
+
+    .section--devices{
+        padding-bottom: 0;
+    }
+
+    /* about */
+
+    .about{
+        margin-top: 50px;
+        justify-content: center;
+    }
+
+    .about__item{
+        width: 100%;
+        max-width: 410px;
+        margin-bottom: 30px;
+    }
+
+    .about__item:last-child{
+        margin-bottom: 0;
+    }
+
+    /* Slider */
+    .slider__text{
+        display: none;
+    }
+    .slider__item.active::before{
+        width: 50%;
+    }
+
+     /* Services */
+     .services{
+         justify-content: center;
+     }
+
+     .services__item{
+        width: 100%;
+        padding-left: 55px;
+        padding-right: 0;
+        max-width:400px;
+    }
+
+    .services__icon{
+        left: 0;
+    }
+
+    /* wedo */
+
+    .wedo__img{
+        display: none;
+    }
+
+    .wedo__item{
+        width: 100%;
+    }
+}
+
+@media (max-width:575px){
+    /* Intro */
+        .intro__suptitle{
+            font-size: 22px;
+        }
+        .intro__title{
+            font-size: 40px;
+        }
+         /* Section */
+        .section__header{
+            margin-bottom: 50px;
+        }
+
+         .section__suptitle{
+             font-size: 20px;
+         }  
+         .section__title{
+             font-size: 24px;
+         }
+
+         .section__title::after{
+             margin: 20px auto;
+         }
+
+         /* Stat */
+         .stat__item{
+             width: 100%;
+             border-bottom: 1px solid #b5eae0;
+         }
+
+         .stat__item:last-child{
+            border-bottom:0;
+        }
+
+        .stat__count{
+            font-size: 52px;
+        }
+
+        /* Devices */
+
+        .devices{
+            max-width: 320px;
+        }
+        .devices__item--iphone{
+            width: 180px;
+            bottom: -50px;
+            right: -80px;
+        }
+
+
+
 }
