refactor:Adaptiv layout,part2

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,9 @@ hr{
     border:0;
     background-color: #e5e5e5;
 }
+.page{
+    overflow: hidden;
+}
 
 /* container */
 .container {
@@ -219,6 +222,7 @@ margin: 30px auto ;
 
 .section{
     padding: 80px;
+    /* overflow: hidden; */
 }
 
 .section--gray{
@@ -451,6 +455,7 @@ Devices */
     max-width: 600px;
     margin: 0 auto;
     position: relative;
+    
 }
 
 .devices__item{
@@ -569,6 +574,9 @@ Devices */
 }
 
 .reviews__photo{
+    display: block;
+    width: 210px;
+    height: 210px;
     position: absolute;
     top: 0;
     left: 0;
@@ -664,6 +672,17 @@ social */
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 0 -15px;
+}
+.logos__item{
+    padding: 0 15px;
+}
+
+.logos__img{
+    display: block;
+    max-width: 100%;
+    height: auto;
+
 }
 
 /* works */
@@ -783,6 +802,7 @@ social */
 
 .blog{
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
 }
 
@@ -900,6 +920,8 @@ social */
 
 .footer__inner{
     display: flex;
+    flex-wrap: wrap;
+    margin: 0 -15px;
     justify-content: space-between;
     padding-bottom: 65px;
 }
@@ -907,6 +929,10 @@ social */
 .footer{
     background-color:#f8f8f8;
     padding-top:65px ;
+}
+
+.footer__col{
+    padding: 0 15px;
 }
 
 .footer__col--first{
@@ -1087,6 +1113,8 @@ font-weight: 300;
 
 .instagram__item img {
     display: block;
+    max-width: 100%;
+    height: auto;
 }
 
 .copyright{
@@ -1102,6 +1130,11 @@ font-weight: 300;
 }
 
 @media (max-width:1200px){
+        /* reviews */
+         
+        .reviews__text{
+            font-size: 20px;
+        }
     /* Intro */
         .intro__suptitle{
             font-size: 52px;
@@ -1144,6 +1177,55 @@ font-weight: 300;
 
         .services__item--border{
             border-bottom:0;
+        }
+            /* Reviews */
+        .reviews{
+            padding: 0 60px;
+        }
+
+        .reviews__photo {
+            width: 150px;
+            height: 150px;
+            
+        }
+        .reviews__item{
+            padding-left: 175px;
+        }
+
+        /* clients */
+
+        .clients{
+            max-width: 600px;
+            margin: 0 auto;
+        }
+
+        .clients__item{
+            width: 100%;
+            padding-right: 0;
+        }
+
+        .clients__item:last-child{
+            margin-bottom: 0;
+        }
+
+        /* Footer */
+
+        .footer__col--first{
+            width: 100%;
+        }
+
+        .footer__col--second,
+        .footer__col--third{
+            width: 50%;
+        }
+        /* instagram */
+
+        .instagram {
+            justify-content: flex-start;
+        }
+
+        .instagram__item {
+            width: auto;
         }
 }
 
@@ -1213,6 +1295,60 @@ font-weight: 300;
     .wedo__item{
         width: 100%;
     }
+
+    /* Reviews */
+    .reviews__photo {
+        position: static;
+        margin: 0 auto 20px;
+                
+    }
+    .reviews__item{
+        padding-left: 0;
+    }
+    .reviews__text{
+        font-size: 16px;
+    }
+
+    .reviews__author{
+        font-size:20px;
+    }
+
+    /* work */
+    .works{
+        flex-wrap: wrap;
+    }
+
+    .works__col{
+        flex:none;
+        width:50%;
+    }
+
+    /* Blogs */
+
+    .blog{
+        max-width: 380px;
+        margin: 0 auto;
+    }
+
+    .blog__item{
+        width: 100%;
+        margin-bottom: 30px;
+    }
+    .blog__item:last-child{
+        width: 100%;
+        margin-bottom: 0;
+    }
+
+     /* Footer */
+
+    .footer__col--first,
+    .footer__col--second,
+    .footer__col--third{
+        width: 100%;
+    }
+
+
+
 }
 
 @media (max-width:575px){
@@ -1263,7 +1399,73 @@ font-weight: 300;
             bottom: -50px;
             right: -80px;
         }
+        /* Reviews */   
+        .reviews{
+            padding: 0;
+        }
 
+        .reviews__btn{
+            top:18%
+        }
 
+        /* logos */
+        .logos{
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+        .logos__item{
+            width: 50%;
+            margin-bottom: 20px;
+        }
+
+        .logos__img{
+            margin: 0 auto;
+        }
+
+        /* works */
+
+        .works__col{
+            flex:none;
+            width:100%;
+        }
+
+        /* Clients */
+        .clients__photo{
+            position: static;
+        }
+        .clients__item{
+            padding-left: 0;
+            text-align: center;
+        }
+
+        .clients__text::before{
+            margin: 15px auto;
+        }
+        
+        /* subscribe */
+
+        .subscribe{
+            flex-wrap: wrap;
+            max-width: none;
+        }
+
+        .subscribe__input{
+            margin-bottom: 10px;
+            border-right:1px solid #e7e7e7
+        }
+
+        .subscribe__input,
+        .subscribe__btn{
+            width: 100%;
+        }
+
+        /* Blogs */
+        .blogs__img{
+            width: 80px;
+            height: 50px;
+        }
+        .blogs__title{
+           font-size: 10px;
+        }
 
 }
