--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,8 +38,10 @@ hr{
 
 /* intro */
 .intro {
+    position: relative;
     width: 100%;
     height: 100vh;
+    min-height: 820px;
     background: url("../images/intro.jpg") center,no-repeat;
     background-size:cover;
     display: flex;
@@ -70,6 +72,7 @@ margin: 30px auto ;
 }
 
 .intro__inner {
+    
     width: 100%;
     max-width: 880px;
     margin: 0 auto;
@@ -166,6 +169,21 @@ margin: 30px auto ;
     top: 0;
     left: 0;
     right: 0;
+    z-index: 1000;
+}
+
+.header.fixed{
+    background-color: #eb8b8d;
+    box-shadow: 0 3px 10px rgba(0,0,0, 0.2);
+    position: fixed;
+    top: 0;
+    right: 0; 
+    left: 0;
+    transform: translate3d(0,0,0);
+}
+
+.header.active{
+    background-color: #eb8b8d;
 }
 
 .header__inner{
@@ -216,6 +234,69 @@ margin: 30px auto ;
 }
 .nav__link.active{
     color: #fce38a;
+}
+
+/* Nav toggle */
+
+.nav-toggle{
+    display: none;
+    font-size: 0;
+    color:transparent;
+    cursor: pointer;
+    border:0;
+    background:none;
+    width: 30px;
+    padding: 10px 0;
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    z-index: 1;
+}
+
+.nav-toggle__item{
+    display: block; 
+    width: 100%;
+    height: 3px;
+    background-color: #fff;
+    position: absolute;
+    top: 0;
+    right: 0; 
+    bottom: 0; 
+    left: 0;
+    margin: auto;
+    transition: background .2s linear;
+}
+.nav-toggle.active .nav-toggle__item{
+    background:none
+}
+
+.nav-toggle.active .nav-toggle__item::before{
+    transform-origin: left top;
+    transform: rotate(45deg) translateX(-2px);
+}
+
+.nav-toggle.active .nav-toggle__item::after{
+    transform-origin: left bottom;
+    transform: rotate(-45deg) translateX(-3px);
+}
+
+.nav-toggle__item::before,
+.nav-toggle__item::after{
+    content:"";
+    width: 100%;
+    height: 3px;
+    background-color: #fff;
+    position: absolute;
+    left: 0;
+    z-index: 1;
+    transition: transform .2s linear;
+}
+
+.nav-toggle__item::before{
+    top: -8px;
+}
+.nav-toggle__item::after{
+    bottom: -8px;
 }
 
 /* section */
@@ -1231,9 +1312,34 @@ font-weight: 300;
 
 @media (max-width:770px){
 
+    /* Intro */
+    .intro{
+        min-height: 650px;
+    }
+
+    /* Header */
+    .header{
+        padding: 10px 0;
+    }
+
     /* Nav */
     .nav{
     display: none;
+    width: 100%;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: #eb8b8d;
+    }
+
+    .nav__link{
+        display: block;
+        margin: 0;
+        padding: 8px 20px;
+    }
+
+    .nav-toggle{
+        display: block;
     }
 
     /* Section */
@@ -1353,6 +1459,7 @@ font-weight: 300;
 
 @media (max-width:575px){
     /* Intro */
+
         .intro__suptitle{
             font-size: 22px;
         }
